# meta-note

./: .gitignore  .gitmodules  BiliNoteDetail.md  BiliNoteSPEC.md  README.md  REQUIREMENT.md  REQUIREMENT_V2.md  docker-compose.env.yml  package.json
backend-api/: pom.xml
backend-api/message-service/: pom.xml
backend-api/product-service/: pom.xml
backend-api/user-service/: pom.xml
system-management/: .env.example  .gitignore  README.md  REQUIREMENT.md  fasion.ahk  package-lock.json  package.json  tsconfig.json  vite.config.ts
system-management/extraResources/: .subgithub
system-management/notes/: Fossil-Asmbb论坛网站开发编译与发布攻略.md  movie-tech.md  python-help.py
system-management/notes/C++/: library.md
system-management/notes/javascript/: WebGPU-BaseLearn.md
system-management/offline-note/: Fossil-Asmbb论坛网站开发编译与发布攻略.md  application-design-process.md  database&sql.md  ios.swift  linux.md  microServer&DispatchSystem.md  movie-tech.md  open-interpreter.md  redis.md  sql.md  video-live-stream.md  web-development.md  webassembly.md  基础架构开发-操作系统、嵌入式、ic、云原生.md
system-management/offline-note/AI/: AI人工智能-深度学习-baseLearn.md
system-management/offline-note/Cpp&Rust/: Tokio库.md  (+2 more)
system-support/: CMakeLists.txt  Cargo.toml  PLAN.md
system-support/app/: CMakeLists.txt
system-support/app/src/: hazel.cpp  hello.c  logger.cpp  main.cpp  utils.cpp  utils.h
system-support/app/src/include/: stdafx.cpp  stdafx.h
system-support/app/src/platform/: usb.cpp  usb.h
system-support/engine/: CMakeLists.txt
system-support/src/: lib.rs
system-support/src/api/: mod.rs
(+95 files in other folders)
